# cli

./: .gitignore  Cargo.toml  LICENSE  README.md  allout.txt
examples/hello/: Cargo.toml
examples/hello/src/: main.rs  main.rs.org
src/: core.rs  formatting.rs  lib.rs  term.rs  types.rs  utils.rs
tests/: test_basic.rs
