[package]

name = "clt"
version = "0.0.1"
authors = ["Shaun Gillies <me@shaungillies.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shaungillies/cli"
homepage = "https://github.com/shaungillies/cli"
description = "Rust crate for efficiently creating command line applications."

[dependencies]
getopts = "*"
time = "*"
tempdir = "*"
libc = "*"
