[package]

name = "clt"
version = "0.0.2"
authors = ["Shaun Gillies <me@shaungillies.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shaungillies/cli"
homepage = "https://github.com/shaungillies/cli"
description = "Rust crate for efficiently creating command line applications."

[dependencies]
getopts = "0.2.14"
tempdir = "0.3.4"
libc = "0.2.12"
